update config to include skills markdown files

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -19,6 +19,19 @@ collections:
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Tags", name: "tags", widget: "list"}
 
+  - name: "skills"
+    label: "Skills"
+    folder: "src/pages/skills"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - {label: "Template Key", name: "templateKey", widget: "hidden", default: "blog-post"}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Description", name: "description", widget: "text"}
+      - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Tags", name: "tags", widget: "list"}
+
+
   - name: "pages"
     label: "Pages"
     files:
